--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,14 +14,14 @@ rust-version = "1.57"
 tauri-build = { version = "1.1", features = [] }
 
 [dependencies]
+rdev = "0.5.1"
+dotenv = "0.10"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
-rdev = "0.5.1"
-r2d2 = "0.8.10"
-r2d2_sqlite = "0.21.0"
-rusqlite = { version = "0.28.0", features = ["bundled"] }
-directories = "4.0.1"
+diesel = { version = "1.4.0", features = ["sqlite"] }
+libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
+diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
 
 [features]
 # by default Tauri runs in production mode
