--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ dotenv = "0.10"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
-diesel = { version = "2.0.0", features = ["sqlite"] }
+diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
 libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
 diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
 
