--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,9 +19,10 @@ dotenv = "0.10"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
-diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
+diesel = { version = "2.0.0", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
 libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
 diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
+chrono = "0.4.22"
 
 [features]
 # by default Tauri runs in production mode
