--- a/packages/shared/Cargo.toml
+++ b/packages/shared/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 sea-orm = { workspace = true }
+rdev = { version = "0.5.2", features = ["serialize"] }
+dotenv = "0.15.0"
