--- a/packages/client/Cargo.toml
+++ b/packages/client/Cargo.toml
@@ -2,14 +2,7 @@
 name = "client"
 version = "0.1.0"
 description = "Key Logger App"
-authors = ["Zenthae"]
-# license = ""
-# repository = ""
-# default-run = "app"
 edition = "2021"
-# rust-version = "1.59"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.2.0", features = [] }
@@ -18,7 +11,7 @@ tauri-build = { version = "1.2.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.0", features = [] }
-shared = { path = "../shared" }
+shared = { workspace = true }
 
 [features]
 # by default Tauri runs in production mode
