--- a/packages/client/Cargo.toml
+++ b/packages/client/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.0", features = [] }
 shared = { workspace = true }
+tokio = { workspace = true }
 
 [features]
 # by default Tauri runs in production mode
