--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ sea-orm = { version = "0.10.3", features = [
 tokio = { version = "1.22.0", features = ["full"] }
 rdev = { version = "0.5.2", features = ["serialize"] }
 dotenv = "0.15.0"
+migration = { path = "migration" }
 
 [features]
 # by default Tauri runs in production mode
@@ -34,3 +35,6 @@ default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
+
+[workspace]
+members = [".", "migration"]
