--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "vue": "^3.2.37",
-    "@tauri-apps/api": "^1.1.0"
+    "@master/css": "^1.37.8",
+    "@tauri-apps/api": "^1.1.0",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
+    "@tauri-apps/cli": "^1.1.0",
+    "@types/node": "^18.11.10",
     "@vitejs/plugin-vue": "^3.0.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.2",
-    "vue-tsc": "^1.0.0",
-    "@tauri-apps/cli": "^1.1.0"
+    "vue-tsc": "^1.0.10"
   }
 }
