--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ dotenv = "0.15.0"
 migration = { path = "migration" }
 entity = { path = "entity" }
 futures = "0.3.25"
+chrono = "0.4.22"
 
 [features]
 # by default Tauri runs in production mode
